// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Accordion expands 1`] = `
<div
  className="layout__AccordionWrapper-hiry1l-0 damoSF"
>
  <div
    className="layout__AccordionHeader-hiry1l-3 kZHexw"
    disabled={false}
  >
    <h3
      className="Heading-sc-1fj2bsx-0 iZeiBo"
      color="bulma.100"
      onClick={[Function]}
      size={16}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="layout__AccordionToggle-hiry1l-4 cEXthF"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-kkeJPq bsWufl"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="layout__AccordionContent-hiry1l-1 bZCQZF"
  >
    <div
      className="layout__ChildrenWrapper-hiry1l-2 jngYXT"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion expands 1`] = `
<div
  className="layout__AccordionWrapper-hiry1l-0 damoSF"
>
  <div
    className="layout__AccordionHeader-hiry1l-3 kZHexw"
    disabled={false}
  >
    <h3
      className="Heading-sc-1fj2bsx-0 iZeiBo"
      color="bulma.100"
      onClick={[Function]}
      size={16}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="layout__AccordionToggle-hiry1l-4 cEXthF"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-kkeJPq bsWufl"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="layout__AccordionContent-hiry1l-1 bZCQZF"
  >
    <div
      className="layout__ChildrenWrapper-hiry1l-2 jngYXT"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion expands if button click 1`] = `
<div
  className="layout__AccordionWrapper-hiry1l-0 damoSF"
>
  <div
    className="layout__AccordionHeader-hiry1l-3 kZHexw"
    disabled={false}
  >
    <h3
      className="Heading-sc-1fj2bsx-0 iZeiBo"
      color="bulma.100"
      onClick={[Function]}
      size={16}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="layout__AccordionToggle-hiry1l-4 cEXthF"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-kkeJPq bsWufl"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="layout__AccordionContent-hiry1l-1 bZCQZF"
  >
    <div
      className="layout__ChildrenWrapper-hiry1l-2 jngYXT"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders 1`] = `
<div
  className="layout__AccordionWrapper-hiry1l-0 damoSF"
>
  <div
    className="layout__AccordionHeader-hiry1l-3 kZHexw"
    disabled={false}
  >
    <h3
      className="Heading-sc-1fj2bsx-0 iZeiBo"
      color="bulma.100"
      onClick={[Function]}
      size={16}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="layout__AccordionToggle-hiry1l-4 cEXthF"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-jnHOtz hRpPsu"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="layout__AccordionContent-hiry1l-1 fqVjyp"
  >
    <div
      className="layout__ChildrenWrapper-hiry1l-2 jngYXT"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders an Accordion 1`] = `
<div
  className="layout__AccordionWrapper-hiry1l-0 damoSF"
>
  <div
    className="layout__AccordionHeader-hiry1l-3 kZHexw"
    disabled={false}
  >
    <h3
      className="Heading-sc-1fj2bsx-0 iZeiBo"
      color="bulma.100"
      onClick={[Function]}
      size={16}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="layout__AccordionToggle-hiry1l-4 cEXthF"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-jnHOtz hRpPsu"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="layout__AccordionContent-hiry1l-1 fqVjyp"
  >
    <div
      className="layout__ChildrenWrapper-hiry1l-2 jngYXT"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;
